# RocketChatQtClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
qml/: Main.qml
qml/components/: ChatListItemDelegate.qml  ChatListPanel.qml  LoginForm.qml  MessageListItemDelegate.qml  MessageListPanel.qml
src/: main.cpp
src/network/: apitypes.h  httptransport.cpp  httptransport.h  rocketchatclient.cpp  rocketchatclient.h
src/storage/: isessionstore.h  keychainsessionstore.cpp  keychainsessionstore.h  sessionstorefactory.cpp  sessionstorefactory.h  settingspath.h  settingssessionstore.cpp  settingssessionstore.h
src/ui/: authviewmodel.cpp  authviewmodel.h  chatlistmodel.cpp  chatlistmodel.h  messagelistmodel.cpp  messagelistmodel.h  rcavatarimageprovider.cpp  rcavatarimageprovider.h  userlistmodel.cpp  userlistmodel.h
tests/: sessionstore_tests.cpp  twofa_tests.cpp
